--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ h2 {
     color: #222;
 }
 
+/*generale styling voor de footer*/
+
 footer {
     text-align: center;
     padding: 10px 0;
@@ -82,6 +84,7 @@ footer {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+/*Nav bar hover effects*/
 .topnav a:hover {
     background-color: #666;
     color: #fff;
@@ -126,6 +129,8 @@ a:hover {
     z-index: 1000;
 }
 
+/*css styling voor de custom loader toegepast aan elke webpagina */
+
 .loader {
     color: #b3a7a7;
     font-size: 100px;
@@ -138,6 +143,8 @@ a:hover {
     transform: translateZ(0);
     animation: mltShdSpin 1.7s infinite ease, round 1.7s infinite ease;
 }
+
+/*keyframes voor de bewegend animatie voor de loader*/
 
 @keyframes mltShdSpin {
     0% {
@@ -178,6 +185,8 @@ a:hover {
     }
 }
 
+/*keyframes voor de vorm van de loader  */
+
 @keyframes round {
     0% {
         transform: rotate(0deg)
@@ -187,6 +196,8 @@ a:hover {
         transform: rotate(360deg)
     }
 }
+
+/*styling voor de button in de table*/
 
 .button {
     display: flex;
